--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -143,7 +143,7 @@
   
   <div class="mapwrap" id="mapwrap">
     <div class="map" id="map">
-      <img src="bilder/TXL Lageplan LAF-vektorisiert_013_HD(1).png" alt="Karte" class="map-img" draggable="false" />
+      <img src="bilder/TXL Lageplan LAF-vektorisiert.png" alt="Karte" class="map-img" draggable="false" />
 <div class="pin" id="pin-P5" style="top:57.49%; left:33.25%;"><img src="icons/P5Icon.png" alt="P5"/></div>
 <div class="pin" id="pin-Kruemelecke" style="top:37.9%; left:28.25%;"><img src="icons/KruemeleckeIcon.png" alt="Krümelecke"/></div>
 <div class="pin" id="pin-Sandburg" style="left:24.7%; top:5.9%;"><img src="icons/SandburgIcon.png" alt="Sandburg"/></div>
@@ -407,6 +407,7 @@ const categories = [
 </script>
 </body>
 </html>
+
 
 
 
