--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -160,7 +160,7 @@
 <div class="pin" id="pin-M5" style="top:54.5%; left:61.5%;"><img src="icons/M5Icon.png" alt="M5"/></div>
 <div class="pin" id="pin-VWG1" style="top:54.8%; left:41.7%;"><img src="icons/VWG1Icon.png" alt="VWG1"/></div>
 <div class="pin" id="pin-VWG2" style="top:52.48%; left:38.02%;"><img src="icons/VWG2Icon.png" alt="VWG2"/></div>
-<div class="pin" id="pin-Med" style="top:57.8%; left:39.7%;"><img src="icons/MedIcon.png" alt="Med"/></div>
+<div class="pin" id="pin-MedPoint" style="top:57.8%; left:39.7%;"><img src="icons/MedPointIcon.png" alt="Med"/></div>
 <div class="pin" id="pin-VWG3" style="top:57.45%; left:45.18%;"><img src="icons/VWG3Icon.png" alt="VWG3"/></div>
 <div class="pin" id="pin-Krähenwald" style="top:65.5%; left:34.5%;"><img src="icons/KrähenwaldIcon.png" alt="Krähenwald"/></div>
 <div class="pin" id="pin-WS" style="top:89%; left:74.5%;"><img src="icons/WSIcon.png" alt="Willkommensschule"/></div>
@@ -325,7 +325,7 @@ const categories = [
 
   // Medizin / Hilfe
   { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help'},
-    areas:['Med','VWG1','VWG2','VWG3'] }, // 
+    areas:['MedPoint','VWG1','VWG2','VWG3'] }, // 
 
   // Services / Info
   { id:'services', label:{de:'Service & Info', en:'Services & Info'},
@@ -407,6 +407,7 @@ const categories = [
 </script>
 </body>
 </html>
+
 
 
 
