--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -330,7 +330,7 @@ const categories = [
 
   // Gelände / Orientierung
   { id:'site', label:{de:'Gelände', en:'Site'},
-    areas:['Q','Krähenwald','WS','Bus'] }
+    areas:['Q','Krähenwald','WS','Bus','H'] }
 ];
 
 
@@ -404,6 +404,7 @@ const categories = [
 </script>
 </body>
 </html>
+
 
 
 
