--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -322,7 +322,7 @@ const categories = [
   areas: ['D3', 'Kruemelecke', 'L1', 'L2', 'M5', 'P5', 'Q1', 'Sandburg']},
 
   // Medizin / Hilfe
-  { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help','Sozialerdienst'},
+  { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help','Sozialerdienst']},
     areas:['MedPoint','VWG1','VWG2','VWG3'] }, // 
 
   // Services / Info
@@ -404,6 +404,7 @@ const categories = [
 </script>
 </body>
 </html>
+
 
 
 
