--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -322,8 +322,8 @@ const categories = [
   areas: ['D3', 'Kruemelecke', 'L1', 'L2', 'M5', 'P5', 'Q1', 'Sandburg']},
 
   // Medizin / Hilfe
-  { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help','Sozialerdienst']},
-    areas:['MedPoint','VWG1','VWG2','VWG3'] }, // 
+  { id:'health', label:{de:'Medizin & Hilfe', en:'Medical & Help'},
+    areas:['MedPoint','Sozialerdienst','VWG1','VWG2','VWG3'] }, // 
 
   // Services / Info
   { id:'services', label:{de:'Service & Info', en:'Services & Info'},areas: ['Begleitdienst', 'Bistro', 'Checkin', 'Infopoint', 'Kleiderkammer', 'Post', 'Sprachmittlung', 'Waschsalon'] },
@@ -404,6 +404,7 @@ const categories = [
 </script>
 </body>
 </html>
+
 
 
 
