--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -52,6 +52,7 @@
     height:1080px;
     touch-action:none;
     will-change: transform;
+    transform-origin: 0 0; /* <— NEU */
   }
 
   .map-img {
@@ -204,6 +205,7 @@
 <script src="translations.js"></script>
 <script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
 <script>
+  
   /* ====== STATE & SETTINGS ====== */
   let currentLang = 'de';
   let panzoomInstance = null;
@@ -297,12 +299,14 @@ function getFocusFromURL() {
   } catch { return null; }
 }
   
-function showMap(focusId = null){
+function showMap(){
+  // Tabs umschalten
   document.getElementById('tab-map').classList.add('active');
   document.getElementById('tab-list').classList.remove('active');
   wrapEl.classList.add('active');
   document.getElementById('list').style.display = 'none';
 
+  // Mobile Vollbild & Höhe setzen
   if (isMobile()) {
     enterMapFullscreen();
     setFullscreenVH();
@@ -312,40 +316,31 @@ function showMap(focusId = null){
 
   const mapImgEl = document.querySelector('.map-img');
 
+  // Bild laden → 1 Frame warten → dann Maße/fit berechnen
   waitForImage(mapImgEl, () => {
-    // Basis-Fit bestimmen (für minScale)
-    const fit = computeFit(START_X_PERCENT);
-    const minScale = fit.scale;
+    requestAnimationFrame(() => {
+      const fit = computeFit(START_X_PERCENT); // mittig einpassen
+      const minScale = fit.scale;
 
-    // Ziel bestimmen (falls übergeben/gesetzt)
-    const id = focusId || lastFocusId || null;
-    const targetScale = Math.max(2, minScale);
-    const targetTf = id ? computeTransformForPin(id, targetScale) : null;
-
-    if (!panzoomInstance) {
-      // Panzoom direkt mit der richtigen Start-Transform initialisieren
-      panzoomInstance = Panzoom(mapEl, {
-        maxScale: 4,
-        contain: 'outside',
-        startScale: targetTf ? targetTf.scale : fit.scale,
-        startX:    targetTf ? targetTf.x     : fit.x,
-        startY:    targetTf ? targetTf.y     : fit.y,
-        animate: true
-      });
-      wrapEl.addEventListener('wheel', (e) => {
-        e.preventDefault();
-        panzoomInstance.zoomWithWheel(e);
-      }, { passive: false });
+      if (!panzoomInstance) {
+        panzoomInstance = Panzoom(mapEl, {
+          maxScale: 4,
+          contain: 'none',     // <— WICHTIG: nicht nach außen „einrasten“
+          startScale: fit.scale,
+          startX:    fit.x,
+          startY:    fit.y,
+          animate: true
+        });
+        wrapEl.addEventListener('wheel', (e) => {
+          e.preventDefault();
+          panzoomInstance.zoomWithWheel(e);
+        }, { passive: false });
+      } else {
+        panzoomInstance.setOptions({ contain: 'none' });
+        panzoomInstance.setTransform(fit);
+      }
       panzoomInstance.setOptions({ minScale });
-    } else {
-      panzoomInstance.setOptions({ minScale });
-      // Falls ein Ziel übergeben wurde: sofort dort hin
-      if (targetTf) panzoomInstance.setTransform(targetTf);
-      else panzoomInstance.setTransform(fit);
-    }
-
-    // Visuelles Highlight am Ende setzen
-    if (id) highlightPin(id);
+    });
   });
 }
 
@@ -439,7 +434,7 @@ function renderList(areaIds){
     btn1.onclick = (e) => { e.stopPropagation(); lastFocusId = id; openSheet(id); }; // << gemerkt
 
     const btn2 = document.createElement('button'); btn2.className = 'btn ghost'; btn2.textContent = 'Auf Karte zeigen';
-    btn2.onclick = (e) => { e.stopPropagation(); lastFocusId = id; showMap(id); }; // << neu: direkt mit ID
+    btn2.onclick = (e) => { e.stopPropagation(); showMap(); };
 
     actions.append(btn1, btn2);
     body.append(h, meta, txt, actions);
@@ -523,6 +518,7 @@ function computeTransformForPin(id, targetScale){
 </script>
 </body>
 </html>
+
 
 
 
