--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -204,6 +204,8 @@
 <script src="translations.js"></script>
 <script src="https://unpkg.com/@panzoom/panzoom/dist/panzoom.min.js"></script>
 <script>
+  
+  
   /* ====== STATE & SETTINGS ====== */
   let currentLang = 'de';
   let panzoomInstance = null;
@@ -249,7 +251,7 @@
       requestAnimationFrame(() => {
         const t = panzoomInstance.getTransform();
         const min = panzoomInstance.getOptions().minScale ?? 0;
-        if (Math.abs(t.scale - min) < 0.03) fitAndCenter(START_X_PERCENT);
+        if (Math.abs(t.scale - min) < 0.03) fitAndCenter(0.5);
       });
     }
   }
@@ -283,21 +285,8 @@
     if (isMobile()) { exitMapFullscreen(); disableVHWatchers(); }
   }
 
-  function waitForImage(imgEl, cb) {
-    if (!imgEl) return;
-    if (imgEl.complete) cb();
-    else imgEl.addEventListener('load', cb, { once: true });
-  }
   
-function getFocusFromURL() {
-  try {
-    const p = new URLSearchParams(location.search);
-    const hash = location.hash || '';
-    return p.get('focus') || (hash.startsWith('#pin-') ? decodeURIComponent(hash.slice(5)) : null);
-  } catch { return null; }
-}
-  
-function showMap(focusId = null){
+function showMap() {
   document.getElementById('tab-map').classList.add('active');
   document.getElementById('tab-list').classList.remove('active');
   wrapEl.classList.add('active');
@@ -313,39 +302,29 @@ function showMap(focusId = null){
   const mapImgEl = document.querySelector('.map-img');
 
   waitForImage(mapImgEl, () => {
-    // Basis-Fit bestimmen (für minScale)
-    const fit = computeFit(START_X_PERCENT);
+    const fit = computeFit(0.5, 'center'); // immer Mitte!
     const minScale = fit.scale;
 
-    // Ziel bestimmen (falls übergeben/gesetzt)
-    const id = focusId || lastFocusId || null;
-    const targetScale = Math.max(2, minScale);
-    const targetTf = id ? computeTransformForPin(id, targetScale) : null;
-
     if (!panzoomInstance) {
-      // Panzoom direkt mit der richtigen Start-Transform initialisieren
       panzoomInstance = Panzoom(mapEl, {
         maxScale: 4,
         contain: 'outside',
-        startScale: targetTf ? targetTf.scale : fit.scale,
-        startX:    targetTf ? targetTf.x     : fit.x,
-        startY:    targetTf ? targetTf.y     : fit.y,
+        startScale: fit.scale,
+        startX: fit.x,
+        startY: fit.y,
         animate: true
       });
+
       wrapEl.addEventListener('wheel', (e) => {
         e.preventDefault();
         panzoomInstance.zoomWithWheel(e);
       }, { passive: false });
+
       panzoomInstance.setOptions({ minScale });
     } else {
       panzoomInstance.setOptions({ minScale });
-      // Falls ein Ziel übergeben wurde: sofort dort hin
-      if (targetTf) panzoomInstance.setTransform(targetTf);
-      else panzoomInstance.setTransform(fit);
+      panzoomInstance.setTransform(fit); // immer zurück zur Mitte
     }
-
-    // Visuelles Highlight am Ende setzen
-    if (id) highlightPin(id);
   });
 }
 
@@ -367,41 +346,8 @@ const categories = [
     areas:['Q','Krähenwald','WS','Bus','H'] }
 ];
 
-  let lastFocusId = null;        // z.B. 'MedPoint'
-let highlightedPinId = null;
-
-function highlightPin(id) {
-  // altes Highlight entfernen
-  if (highlightedPinId) {
-    const prev = document.getElementById(`pin-${highlightedPinId}`);
-    if (prev) prev.classList.remove('highlight');
-  }
-  // neues setzen
-  const el = document.getElementById(`pin-${id}`);
-  if (el) {
-    el.classList.add('highlight');
-    highlightedPinId = id;
-  }
-}
-
-function clearHighlight() {
-  if (!highlightedPinId) return;
-  const el = document.getElementById(`pin-${highlightedPinId}`);
-  if (el) el.classList.remove('highlight');
-  highlightedPinId = null;
-}
-
-// (optional) Alias-Auflösung, falls mal "med" statt "MedPoint" übergeben wird
-const aliases = { med: 'MedPoint', medpoint: 'MedPoint', 'med point':'MedPoint' };
-function resolveId(id) {
-  if (!id) return id;
-  const key = String(id).toLowerCase();
-  return aliases[key] || id;
-}
-
-
-
-  function render(){
+  
+   function render(){
     const chips = document.getElementById('chips'); chips.innerHTML='';
     categories.forEach(c=>{
       const el=document.createElement('button');
@@ -439,7 +385,11 @@ function renderList(areaIds){
     btn1.onclick = (e) => { e.stopPropagation(); lastFocusId = id; openSheet(id); }; // << gemerkt
 
     const btn2 = document.createElement('button'); btn2.className = 'btn ghost'; btn2.textContent = 'Auf Karte zeigen';
-    btn2.onclick = (e) => { e.stopPropagation(); lastFocusId = id; showMap(id); }; // << neu: direkt mit ID
+    btn2.onclick = (e) => { 
+    e.stopPropagation(); 
+    lastFocusId = id; 
+    showMap(); // keine ID mehr übergeben
+    };
 
     actions.append(btn1, btn2);
     body.append(h, meta, txt, actions);
@@ -465,7 +415,7 @@ function renderList(areaIds){
   });
 });
 
-
+    /* ====== Details Infoboxen ====== */
   function openSheet(id){
     const d=translations[id]?.[currentLang]; if(!d) return;
     document.getElementById('sTitle').textContent=d.title||id;
@@ -479,42 +429,10 @@ function renderList(areaIds){
     });
     document.getElementById('sheet').classList.add('open');
   }
+  
   function closeSheet(){ document.getElementById('sheet').classList.remove('open'); }
 
   /* ====== Pin-Fokus ====== */
-
-
-  // Pin-Mitte in Kartenkoordinaten (px) berechnen – anhand der % im style
-function getPinCenter(id){
-  const el = document.getElementById(`pin-${id}`);
-  if (!el) return null;
-  const leftPct = parseFloat(el.style.left);
-  const topPct  = parseFloat(el.style.top);
-  const pinWidthPct = 3.05; // wie im CSS .pin { width: 3.05% }
-  const cx = (leftPct + pinWidthPct * 0.5) / 100 * MAP_W;
-  const cy = (topPct) / 100 * MAP_H;
-  return { cx, cy };
-}
-
-  function focusPin(id, targetScale = 2){
-  if (!panzoomInstance) return;
-  // minScale beachten, nie darunter zoomen
-  const { scale: minScale } = computeFit(START_X_PERCENT);
-  const s = Math.max(targetScale, minScale);
-  const tf = computeTransformForPin(id, s);
-  if (tf) panzoomInstance.setTransform(tf);
-}
-
-
-// Ziel-Transform (x,y,scale) berechnen, damit der Pin in der Mitte landet
-function computeTransformForPin(id, targetScale){
-  const pc = getPinCenter(id);
-  if (!pc) return null;
-  const rect = wrapEl.getBoundingClientRect();
-  const x = rect.width / 2  - pc.cx * targetScale;
-  const y = rect.height / 2 - pc.cy * targetScale;
-  return { x, y, scale: targetScale };
-}
 
 
   /* ====== Start ====== */
@@ -523,6 +441,7 @@ function computeTransformForPin(id, targetScale){
 </script>
 </body>
 </html>
+
 
 
 
