--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -313,41 +313,48 @@ function showMap(focusId = null){
   const mapImgEl = document.querySelector('.map-img');
 
   waitForImage(mapImgEl, () => {
-    // Basis-Fit bestimmen (für minScale)
-    const fit = computeFit(START_X_PERCENT);
+    const fit = computeFit(0.5, 'center');
     const minScale = fit.scale;
 
-    // Ziel bestimmen (falls übergeben/gesetzt)
-    const id = focusId || lastFocusId || null;
-    const targetScale = Math.max(2, minScale);
-    const targetTf = id ? computeTransformForPin(id, targetScale) : null;
-
+    // 1) Panzoom init (falls nötig) – immer mit Fit starten
     if (!panzoomInstance) {
-      // Panzoom direkt mit der richtigen Start-Transform initialisieren
       panzoomInstance = Panzoom(mapEl, {
         maxScale: 4,
         contain: 'outside',
-        startScale: targetTf ? targetTf.scale : fit.scale,
-        startX:    targetTf ? targetTf.x     : fit.x,
-        startY:    targetTf ? targetTf.y     : fit.y,
+        startScale: fit.scale,
+        startX:    fit.x,
+        startY:    fit.y,
         animate: true
       });
       wrapEl.addEventListener('wheel', (e) => {
         e.preventDefault();
         panzoomInstance.zoomWithWheel(e);
       }, { passive: false });
-      panzoomInstance.setOptions({ minScale });
-    } else {
-      panzoomInstance.setOptions({ minScale });
-      // Falls ein Ziel übergeben wurde: sofort dort hin
-      if (targetTf) panzoomInstance.setTransform(targetTf);
-      else panzoomInstance.setTransform(fit);
     }
 
-    // Visuelles Highlight am Ende setzen
-    if (id) highlightPin(id);
+    // minScale ggf. aktualisieren
+    panzoomInstance.setOptions({ minScale });
+
+    // 2) NACH der Init (oder auch wenn schon init) explizit springen
+    const id = focusId || lastFocusId || null;
+    if (id) {
+      const targetScale = Math.max(2, minScale);
+      const tf = computeTransformForPin(id, targetScale);
+      if (tf) {
+        panzoomInstance.setTransform(tf);   // <- der entscheidende Schritt
+        highlightPin?.(id);
+      } else {
+        // Fallback: wenn id nicht gefunden wurde -> auf Mitte bleiben
+        panzoomInstance.setTransform(fit);
+        console.warn('Pin nicht gefunden oder keine Koordinaten:', id);
+      }
+    } else {
+      // kein Ziel -> einfach Mitte
+      panzoomInstance.setTransform(fit);
+    }
   });
 }
+
 
   /* ====== LISTE & DATEN ====== */
 const categories = [
@@ -485,36 +492,47 @@ function renderList(areaIds){
 
 
   // Pin-Mitte in Kartenkoordinaten (px) berechnen – anhand der % im style
+
 function getPinCenter(id){
   const el = document.getElementById(`pin-${id}`);
   if (!el) return null;
-  const leftPct = parseFloat(el.style.left);
-  const topPct  = parseFloat(el.style.top);
+
+  // Wir erwarten Prozentwerte im inline-style
+  const leftStr = el.style.left || '';
+  const topStr  = el.style.top  || '';
+  if (!leftStr.endsWith('%') || !topStr.endsWith('%')) {
+    // Falls jemand später CSS ändert (px statt %) -> lieber abbrechen
+    return null;
+  }
+
+  const leftPct = parseFloat(leftStr);
+  const topPct  = parseFloat(topStr);
+  if (!Number.isFinite(leftPct) || !Number.isFinite(topPct)) return null;
+
   const pinWidthPct = 3.05; // wie im CSS .pin { width: 3.05% }
   const cx = (leftPct + pinWidthPct * 0.5) / 100 * MAP_W;
   const cy = (topPct) / 100 * MAP_H;
   return { cx, cy };
 }
 
-  function focusPin(id, targetScale = 2){
+function focusPin(id, targetScale = 2){
   if (!panzoomInstance) return;
-  // minScale beachten, nie darunter zoomen
-  const { scale: minScale } = computeFit(START_X_PERCENT);
+  const { scale: minScale } = computeFit(0.5, 'center');
   const s = Math.max(targetScale, minScale);
   const tf = computeTransformForPin(id, s);
   if (tf) panzoomInstance.setTransform(tf);
 }
 
-
-// Ziel-Transform (x,y,scale) berechnen, damit der Pin in der Mitte landet
+  
 function computeTransformForPin(id, targetScale){
   const pc = getPinCenter(id);
   if (!pc) return null;
   const rect = wrapEl.getBoundingClientRect();
-  const x = rect.width / 2  - pc.cx * targetScale;
+  const x = rect.width  / 2 - pc.cx * targetScale;
   const y = rect.height / 2 - pc.cy * targetScale;
   return { x, y, scale: targetScale };
 }
+
 
 
   /* ====== Start ====== */
@@ -523,6 +541,7 @@ function computeTransformForPin(id, targetScale){
 </script>
 </body>
 </html>
+
 
 
 
