--- a/App Interaktive Karte/index.html
+++ b/App Interaktive Karte/index.html
@@ -496,17 +496,15 @@ function getPinCenter(id){
   return { cx, cy };
 }
 
-  function focusPin(id, targetScale = 2){
+function focusPin(id){
   if (!panzoomInstance) return;
-  // minScale beachten, nie darunter zoomen
-  const { scale: minScale } = computeFit(START_X_PERCENT);
-  const s = Math.max(targetScale, minScale);
-  const tf = computeTransformForPin(id, s);
-  if (tf) panzoomInstance.setTransform(tf);
+  const currentScale = panzoomInstance.getTransform().scale;
+  const tf = computeTransformForPin(id, currentScale);
+  if (!tf) return;
+  panzoomInstance.setTransform(tf);
 }
 
 
-// Ziel-Transform (x,y,scale) berechnen, damit der Pin in der Mitte landet
 function computeTransformForPin(id, targetScale){
   const pc = getPinCenter(id);
   if (!pc) return null;
@@ -523,6 +521,7 @@ function computeTransformForPin(id, targetScale){
 </script>
 </body>
 </html>
+
 
 
 
